Delete legacy chart backends (jfx, swing, png, svg) and remove xchart dependency
All chart rendering now goes through Charm/SVG + chartexport. The legacy
backend packages had zero production callers, so this removes 25 dead source
files, drops the xchart dependency, cleans up the JFreeChart comment and the
javafx.scene.chart JVM arg, and updates tests accordingly.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>